--- a/web/plan.html
+++ b/web/plan.html
@@ -5,6 +5,37 @@
     <title>레슨플랜 생성</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="./css/style.css" rel="stylesheet" />
+    <style>
+      /* 인쇄용 */
+      @media print {
+        .nav,
+        .no-print {
+          display: none !important;
+        }
+        body {
+          background: #fff;
+        }
+        .card {
+          box-shadow: none;
+          border: 0;
+        }
+      }
+      .book-card {
+        border: 1px solid var(--border);
+        border-radius: 12px;
+        padding: 10px;
+        margin-top: 8px;
+      }
+      .book-head {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .small {
+        font-size: 12px;
+        color: var(--muted);
+      }
+    </style>
   </head>
   <body>
     <nav class="nav">
@@ -15,6 +46,7 @@
     </nav>
 
     <main class="container space">
+      <!-- 기본 정보 -->
       <section class="card">
         <div class="card-h">기본 정보</div>
         <div class="card-b grid">
@@ -28,6 +60,8 @@
             ><select id="selStudent"></select>
           </div>
           <div><label>시작일</label><input type="date" id="startDate" /></div>
+          <div><label>끝 날짜</label><input type="date" id="endDate" /></div>
+
           <div>
             <label>요일 커스텀(쉼표)</label
             ><input id="customDays" placeholder="MON,WED,FRI" />
@@ -35,56 +69,126 @@
         </div>
       </section>
 
+      <!-- 교재 선택 -->
       <section class="card">
         <div class="card-h">교재 선택</div>
         <div class="card-b grid2">
+          <!-- 메인1 -->
           <div>
-            <div class="muted mb">본교재</div>
-            <select id="selMain"></select>
-            <div id="mainUnits" class="list mt"></div>
+            <div class="muted mb">메인 1</div>
+            <div class="row">
+              <select id="selMain1"></select>
+              <button class="btn no-print" id="btnAddMain1">추가</button>
+            </div>
+            <div id="laneMain1" class="mt"></div>
           </div>
+
+          <!-- 메인2 -->
           <div>
-            <div class="muted mb">어휘교재</div>
-            <select id="selVocab"></select>
-            <div id="vocabUnits" class="list mt"></div>
+            <div class="muted mb">메인 2</div>
+            <div class="row">
+              <select id="selMain2"></select>
+              <button class="btn no-print" id="btnAddMain2">추가</button>
+            </div>
+            <div id="laneMain2" class="mt"></div>
+          </div>
+
+          <!-- 어휘 -->
+          <div>
+            <div class="muted mb">어휘</div>
+            <div class="row">
+              <select id="selVocab"></select>
+              <button class="btn no-print" id="btnAddVocab">추가</button>
+            </div>
+            <div id="laneVocab" class="mt"></div>
           </div>
         </div>
       </section>
 
+      <!-- 액션 -->
       <section class="card">
-        <div class="card-h">옵션</div>
+        <div class="card-h">생성 / 내보내기</div>
         <div class="card-b row">
-          <div>
-            <label>VOCAB 배정</label>
-            <select id="vocabMode">
-              <option value="paired">매 수업일</option>
-              <option value="weekly_first">주 1회(첫 수업)</option>
-              <option value="manual_only">수동만</option>
-            </select>
-          </div>
-          <div>
-            <label>하루 본교재 최대</label>
-            <select id="maxMain">
-              <option>1</option>
-              <option>2</option>
-            </select>
+          <div class="muted">
+            * 선택한 각 본교재는 **하루 1차시씩**, 어휘는 **하루 1세션** 자동
+            배정
           </div>
           <div class="row-right">
-            <button id="btnPreview" class="btn">미리보기</button>
+            <button class="btn no-print" id="btnPreview">미리보기</button>
+            <button class="btn no-print" id="btnPrint">PDF로 저장</button>
           </div>
         </div>
       </section>
 
+      <!-- 결과 -->
       <section class="card">
-        <div class="card-h">결과</div>
-        <div class="card-b">
-          <div id="result" class="muted">
-            옵션 선택 후 ‘미리보기’를 누르세요.
-          </div>
+        <div class="card-h">결과 (인쇄용 미리보기)</div>
+        <div class="card-b" id="result">
+          옵션을 선택한 뒤 ‘미리보기’를 눌러주세요.
         </div>
       </section>
+      <!-- 간단 모달 -->
+      <div
+        id="skipModal"
+        class="no-print"
+        style="
+          display: none;
+          position: fixed;
+          inset: 0;
+          background: #0005;
+          align-items: center;
+          justify-content: center;
+          z-index: 50;
+        "
+      >
+        <div
+          style="
+            background: #fff;
+            color: #0f172a;
+            border-radius: 12px;
+            width: 360px;
+            max-width: 90%;
+            padding: 16px;
+            box-shadow: 0 10px 30px #0003;
+          "
+        >
+          <div style="font-weight: 700; margin-bottom: 8px">날짜 상태 변경</div>
+          <div
+            class="muted"
+            id="skipDateLabel"
+            style="margin-bottom: 10px"
+          ></div>
+          <div style="display: flex; gap: 8px; margin-bottom: 8px">
+            <button class="btn" data-sel="vacation" style="flex: 1">
+              휴가
+            </button>
+            <button class="btn" data-sel="sick" style="flex: 1">질병</button>
+            <button class="btn" data-sel="other" style="flex: 1">기타</button>
+          </div>
+          <input
+            id="skipReason"
+            placeholder="기타 사유(선택)"
+            style="
+              width: 100%;
+              margin-bottom: 10px;
+              padding: 10px;
+              border: 1px solid #e5e7eb;
+              border-radius: 10px;
+            "
+          />
+          <div style="display: flex; gap: 8px; justify-content: flex-end">
+            <button id="btnSkipDelete" class="btn" style="background: #ef4444">
+              삭제
+            </button>
+            <button id="btnSkipSave" class="btn">저장</button>
+            <button id="btnSkipClose" class="btn" style="background: #94a3b8">
+              닫기
+            </button>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <script src="/js/plan.js" defer></script>
+    <script defer src="/js/plan.js"></script>
   </body>
 </html>
