--- a/web/plan.html
+++ b/web/plan.html
@@ -189,6 +189,6 @@
       </div>
     </main>
 
-    <script defer src="/js/plan.js"></script>
+    <script defer src="./js/plan.js"></script>
   </body>
 </html>
