오류 해결 중

--- a/public/plan.html
+++ b/public/plan.html
@@ -99,13 +99,16 @@
         <div class="card-h">기본 정보</div>
         <div class="card-b grid">
           <div>
-            <label>반</label
-            ><select id="selClass"></select>
-            <div id="classDays" class="muted"></div>
+            <label>반</label>
+            <div id="classDays" class="muted" style="padding-top: 10px">
+              '반 관리'에서 반을 선택하세요.
+            </div>
           </div>
           <div>
-            <label>학생</label
-            ><select id="selStudent"></select>
+            <label>학생</label>
+            <div class="muted" style="padding-top: 10px">
+              '반 관리'에서 학생을 확인하세요.
+            </div>
           </div>
           <div><label>시작일</label><input type="date" id="startDate" /></div>
           <div><label>끝 날짜</label><input type="date" id="endDate" /></div>
