반관리 정리2

--- a/public/plan.html
+++ b/public/plan.html
@@ -98,11 +98,13 @@
               <div class="mt">
                 <label>새 시험 추가</label>
                 <div class="row">
-                  <input type="date" id="newTestDate" />
+                  <input type="date" id="newTestDate" style="flex: 1.5" />
                   <select id="newTestTitle" style="flex: 2">
                     <option value="">시험 선택</option>
                   </select>
-                  <button id="btnTestAdd" class="btn">추가</button>
+                  <button id="btnTestAdd" class="btn" style="flex: 1">
+                    추가
+                  </button>
                 </div>
               </div>
             </div>
