레슨플랜 꾸미기 오류

--- a/public/plan.html
+++ b/public/plan.html
@@ -93,11 +93,8 @@
         padding: 6px 8px;
         font-size: 13px;
         vertical-align: middle;
-        text-align: center; /* [변경] 모든 텍스트 중앙 정렬 */
+        text-align: center;
       }
-      /* [삭제] 첫번째 열 왼쪽 정렬 규칙 삭제
-      .table th:first-child, .table td:first-child { ... }
-      */
       .table th:last-child,
       .table td:last-child {
         border-right: 0;
