--- a/public/plan.html
+++ b/public/plan.html
@@ -106,6 +106,50 @@
       .table .sub-header th {
         background: #f8fafc;
       }
+      /* [추가] 모달 스타일 */
+      .modal-overlay {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: #0005;
+        align-items: center;
+        justify-content: center;
+        z-index: 50;
+      }
+      .modal-content {
+        background: #fff;
+        color: #0f172a;
+        border-radius: 12px;
+        width: 480px;
+        max-width: 90%;
+        padding: 20px;
+        box-shadow: 0 10px 30px #0003;
+      }
+      .modal-title {
+        font-weight: 700;
+        font-size: 18px;
+        margin-bottom: 8px;
+      }
+      .modal-body p {
+        font-size: 14px;
+        color: var(--muted);
+        margin-bottom: 16px;
+      }
+      .modal-actions button {
+        width: 100%;
+        padding: 12px;
+        margin-top: 8px;
+        font-size: 15px;
+      }
+      .plan-list-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px;
+        border: 1px solid var(--border);
+        border-radius: 8px;
+        margin-top: 6px;
+      }
     </style>
   </head>
   <body>
@@ -152,6 +196,16 @@
 
         <section class="card">
           <div class="card-h">학생 관리</div>
+          <div
+            id="planStatus"
+            style="
+              padding: 10px 16px;
+              background-color: #e0f2fe;
+              color: #0c4a6e;
+              font-size: 14px;
+              display: none;
+            "
+          ></div>
           <div class="card-b">
             <div class="mb">
               <label>반</label>
@@ -162,8 +216,12 @@
               ></select>
             </div>
             <div class="mt">
-              <label>학생</label>
-              <select id="selStudent"></select>
+              <label>학생 (저장된 플랜: 💾)</label>
+              <div
+                id="studentList"
+                class="list"
+                style="max-height: 150px; overflow-y: auto"
+              ></div>
             </div>
             <div class="mt">
               <label>시작일</label>
@@ -215,11 +273,17 @@
         <div class="card-h">생성 / 내보내기</div>
         <div class="card-b row">
           <div class="muted">
-            * 선택한 각 본교재는 **하루 1차시씩**, 어휘는 **하루 1세션** 자동
-            배정
+            * 학생을 선택하여 플랜을 생성, 수정, 저장할 수 있습니다.
           </div>
           <div class="row-right">
             <button class="btn no-print" id="btnPreview">미리보기</button>
+            <button
+              class="btn no-print"
+              id="btnSave"
+              style="background: #10b981"
+            >
+              저장하기
+            </button>
             <button class="btn no-print" id="btnPrint">PDF로 저장</button>
           </div>
         </div>
@@ -244,49 +308,30 @@
           justify-content: center;
           z-index: 50;
         "
-      >
-        <div
-          style="
-            background: #fff;
-            color: #0f172a;
-            border-radius: 12px;
-            width: 360px;
-            max-width: 90%;
-            padding: 16px;
-            box-shadow: 0 10px 30px #0003;
-          "
-        >
-          <div style="font-weight: 700; margin-bottom: 8px">날짜 상태 변경</div>
-          <div
-            class="muted"
-            id="skipDateLabel"
-            style="margin-bottom: 10px"
-          ></div>
-          <div style="display: flex; gap: 8px; margin-bottom: 8px">
-            <button class="btn" data-sel="vacation" style="flex: 1">
-              휴가
+      ></div>
+
+      <div id="planActionModal" class="modal-overlay no-print">
+        <div class="modal-content">
+          <div class="modal-title" id="modalStudentName"></div>
+          <p>어떤 작업을 하시겠어요?</p>
+          <div class="modal-actions">
+            <button id="btnAddNewPlan" class="btn">
+              새 기간 플랜 추가하기
             </button>
-            <button class="btn" data-sel="sick" style="flex: 1">질병</button>
-            <button class="btn" data-sel="other" style="flex: 1">기타</button>
-          </div>
-          <input
-            id="skipReason"
-            placeholder="기타 사유(선택)"
-            style="
-              width: 100%;
-              margin-bottom: 10px;
-              padding: 10px;
-              border: 1px solid #e5e7eb;
-              border-radius: 10px;
-            "
-          />
-          <div style="display: flex; gap: 8px; justify-content: flex-end">
-            <button id="btnSkipDelete" class="btn" style="background: #ef4444">
-              삭제
-            </button>
-            <button id="btnSkipSave" class="btn">저장</button>
-            <button id="btnSkipClose" class="btn" style="background: #94a3b8">
-              닫기
+            <div style="margin-top: 16px">
+              <label>기존 플랜 수정/삭제하기</label>
+              <div
+                id="existingPlansList"
+                class="list"
+                style="max-height: 140px"
+              ></div>
+            </div>
+            <button
+              id="btnCancelModal"
+              class="btn"
+              style="background: #94a3b8; margin-top: 20px"
+            >
+              취소
             </button>
           </div>
         </div>
