--- a/public/plan.html
+++ b/public/plan.html
@@ -308,7 +308,53 @@
           justify-content: center;
           z-index: 50;
         "
-      ></div>
+      >
+        <div
+          style="
+            background: #fff;
+            color: #0f172a;
+            border-radius: 12px;
+            width: 360px;
+            max-width: 90%;
+            padding: 16px;
+            box-shadow: 0 10px 30px #0003;
+          "
+        >
+          <div style="font-weight: 700; margin-bottom: 8px">날짜 상태 변경</div>
+          <div
+            class="muted"
+            id="skipDateLabel"
+            style="margin-bottom: 10px"
+          ></div>
+          <div style="display: flex; gap: 8px; margin-bottom: 8px">
+            <button class="btn" data-sel="vacation" style="flex: 1">
+              휴가
+            </button>
+            <button class="btn" data-sel="sick" style="flex: 1">질병</button>
+            <button class="btn" data-sel="other" style="flex: 1">기타</button>
+          </div>
+          <input
+            id="skipReason"
+            placeholder="기타 사유(선택)"
+            style="
+              width: 100%;
+              margin-bottom: 10px;
+              padding: 10px;
+              border: 1px solid #e5e7eb;
+              border-radius: 10px;
+            "
+          />
+          <div style="display: flex; gap: 8px; justify-content: flex-end">
+            <button id="btnSkipDelete" class="btn" style="background: #ef4444">
+              삭제
+            </button>
+            <button id="btnSkipSave" class="btn">저장</button>
+            <button id="btnSkipClose" class="btn" style="background: #94a3b8">
+              닫기
+            </button>
+          </div>
+        </div>
+      </div>
 
       <div id="planActionModal" class="modal-overlay no-print">
         <div class="modal-content">
