다중선택 디벨롭

--- a/public/plan.html
+++ b/public/plan.html
@@ -215,6 +215,7 @@
                 style="background: #f1f5f9"
               ></select>
             </div>
+
             <div class="mt">
               <label>학생 (저장된 플랜: 💾)</label>
               <div
@@ -222,6 +223,18 @@
                 class="list"
                 style="max-height: 150px; overflow-y: auto"
               ></div>
+              <button
+                id="btnManagePlans"
+                class="btn no-print"
+                style="
+                  width: 100%;
+                  margin-top: 10px;
+                  display: none;
+                  background: #64748b;
+                "
+              >
+                선택한 학생의 기존 플랜 관리
+              </button>
             </div>
             <div class="mt">
               <label>시작일</label>
