--- a/public/plan.html
+++ b/public/plan.html
@@ -153,7 +153,8 @@
       /* [추가] 새로운 레이아웃 스타일 */
       .main-layout {
         display: grid;
-        grid-template-columns: 400px 1fr;
+        /* [수정] 왼쪽 패널(최소 380px)과 오른쪽 패널을 1:2 비율로 설정 */
+        grid-template-columns: minmax(380px, 1fr) 2fr;
         gap: 24px;
         align-items: start;
       }
