--- a/public/plan.html
+++ b/public/plan.html
@@ -319,6 +319,13 @@
         <div class="preview-panel">
           <section class="card">
             <div class="card-h">결과 미리보기</div>
+
+            <div id="insertionControls" class="card-b" style="display: none">
+              <button id="btnInsertMode" class="btn" style="width: 100%">
+                📝 선택한 기간에 새 교재 삽입하기
+              </button>
+            </div>
+
             <div class="card-b" id="result">
               왼쪽에서 학생을 선택하고 플랜을 설정해주세요.
             </div>
