--- a/public/plan.html
+++ b/public/plan.html
@@ -205,6 +205,7 @@
               <div class="row">
                 <select id="eventScope" style="flex: 2">
                   <option value="school">학교별</option>
+                  <option value="school_grade">학교 및 학년별</option>
                   <option value="grade">학년별</option>
                   <option value="class">반별</option>
                 </select>
