--- a/public/plan.html
+++ b/public/plan.html
@@ -174,6 +174,24 @@
         align-items: flex-end;
         margin-bottom: 12px;
       }
+      .day-selector {
+        display: flex;
+        gap: 6px;
+        margin-top: 6px;
+      }
+      .day-selector button {
+        flex: 1;
+        padding: 10px 0;
+        border: 1px solid var(--border);
+        background: #f8fafc;
+        color: var(--muted);
+        cursor: pointer;
+      }
+      .day-selector button.active {
+        background: var(--brand);
+        color: #fff;
+        border-color: var(--brand2);
+      }
     </style>
   </head>
   <body>
@@ -305,8 +323,16 @@
                   </div>
                 </div>
                 <div class="mt">
-                  <label>요일 커스텀 (쉼표)</label>
-                  <input id="customDays" placeholder="MON,WED,FRI" />
+                  <label>요일 선택</label>
+                  <div id="daySelector" class="day-selector">
+                    <button data-day="MON">월</button>
+                    <button data-day="TUE">화</button>
+                    <button data-day="WED">수</button>
+                    <button data-day="THU">목</button>
+                    <button data-day="FRI">금</button>
+                    <button data-day="SAT">토</button>
+                    <button data-day="SUN">일</button>
+                  </div>
                 </div>
 
                 <div class="mt">
