--- a/public/plan.html
+++ b/public/plan.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="./css/style.css" rel="stylesheet" />
     <style>
+      /* --- 기존 스타일 유지 --- */
       /* 인쇄용 */
       @media print {
         .nav,
@@ -192,6 +193,34 @@
         color: #fff;
         border-color: var(--brand2);
       }
+      /* ▼▼▼ [추가] 탭 스타일 ▼▼▼ */
+      .tabs {
+        display: flex;
+        gap: 4px;
+        border-bottom: 1px solid var(--border);
+        margin-bottom: 16px;
+      }
+      .tab-button {
+        padding: 10px 16px;
+        border: none;
+        background: none;
+        cursor: pointer;
+        border-bottom: 2px solid transparent;
+        font-size: 14px;
+        color: var(--muted);
+      }
+      .tab-button.active {
+        color: var(--brand);
+        font-weight: bold;
+        border-bottom-color: var(--brand);
+      }
+      .tab-content {
+        display: none;
+      }
+      .tab-content.active {
+        display: block;
+      }
+      /* ▲▲▲ [추가] 탭 스타일 ▲▲▲ */
     </style>
   </head>
   <body>
@@ -204,54 +233,89 @@
 
     <main class="container space">
       <section class="card event-section">
-        <div class="card-h">휴일 및 이벤트 관리</div>
+        <div class="card-h">이벤트 및 보강 관리</div>
         <div class="card-b">
-          <div class="grid2">
-            <div>
-              <label>전체 설정</label>
-              <div class="row">
-                <input type="date" id="eventDateAll" />
-                <input
-                  id="eventTitleAll"
-                  placeholder="내용 (예: 학원 여름방학)"
-                />
-                <button id="btnAddEventAll" class="btn">추가</button>
-              </div>
-            </div>
-            <div>
-              <label>부분 설정</label>
-              <div class="row">
-                <select id="eventScope" style="flex: 2">
-                  <option value="school">학교별</option>
-                  <option value="school_grade">학교 및 학년별</option>
-                  <option value="grade">학년별</option>
-                  <option value="class">반별</option>
-                </select>
-                <div
-                  id="scopedValueContainer"
-                  style="flex: 3; display: flex; gap: 8px"
-                >
-                  <input id="eventScopeValue" placeholder="값을 선택하세요" />
+          <div class="tabs">
+            <button class="tab-button active" data-tab="event">
+              이벤트 추가
+            </button>
+            <button class="tab-button" data-tab="supplementary">
+              보강 추가
+            </button>
+          </div>
+
+          <div id="tabContentEvent" class="tab-content active">
+            <div class="grid2">
+              <div>
+                <label>적용 대상</label>
+                <div style="display: flex; gap: 12px; margin-bottom: 12px">
+                  <label
+                    ><input
+                      type="radio"
+                      name="applyTo"
+                      value="attending"
+                      checked
+                    />
+                    출석 학생만 적용</label
+                  >
+                  <label
+                    ><input type="radio" name="applyTo" value="all" /> 모든 학생
+                    적용</label
+                  >
                 </div>
-                <input type="date" id="eventDateScoped" style="flex: 2" />
-                <input
-                  id="eventTitleScoped"
-                  placeholder="내용"
-                  style="flex: 3"
-                />
-                <button id="btnAddEventScoped" class="btn" style="flex: 1">
-                  추가
-                </button>
               </div>
+              <div></div>
+            </div>
+            <div class="row">
+              <input type="date" id="eventDate" />
+              <select id="eventScope" style="flex: 1">
+                <option value="all">전체</option>
+                <option value="school">학교별</option>
+                <option value="school_grade">학교 및 학년별</option>
+                <option value="grade">학년별</option>
+                <option value="class">반별</option>
+              </select>
+              <div
+                id="scopedValueContainer"
+                style="flex: 2; display: flex; gap: 8px"
+              ></div>
+              <input
+                id="eventTitle"
+                placeholder="내용 (예: 학원 여름방학)"
+                style="flex: 2"
+              />
+              <button id="btnAddEvent" class="btn" style="flex: 1">추가</button>
+            </div>
+          </div>
+
+          <div id="tabContentSupplementary" class="tab-content">
+            <div class="row">
+              <input type="date" id="supDate" />
+              <select id="supScope" style="flex: 1">
+                <option value="all">전체</option>
+                <option value="school">학교별</option>
+                <option value="school_grade">학교 및 학년별</option>
+                <option value="grade">학년별</option>
+                <option value="class">반별</option>
+              </select>
+              <div
+                id="supScopedValueContainer"
+                style="flex: 2; display: flex; gap: 8px"
+              ></div>
+              <input
+                id="supTitle"
+                placeholder="내용 (예: 정기 보강)"
+                style="flex: 2"
+              />
+              <button id="btnAddSupplementary" class="btn" style="flex: 1">
+                보강 추가
+              </button>
             </div>
           </div>
 
           <div
             class="month-nav"
             style="
-              display: flex;
-              align-items: center;
-              gap: 12px;
               margin-top: 20px;
               border-top: 1px solid #e5e7eb;
               padding-top: 16px;
@@ -284,7 +348,6 @@
           <div id="eventList" class="list mt" style="max-height: 150px"></div>
         </div>
       </section>
-
       <div class="main-layout">
         <div class="config-panel">
           <section class="card">
